--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "es6-module-loader": "^0.17.11",
+    "jquery": "^3.0.0",
+    "material-design-lite": "^1.1.3",
+    "systemjs": "^0.19.31",
     "traceur": "0.0.108"
   },
   "devDependencies": {
